// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GenreSelector renders deletes removes category from state when a category is deleted 1`] = `
<WithStyles(FormControl)
  component="fieldset"
>
  <WithStyles(FormGroup)
    row={true}
  >
    <WithStyles(WithFormControlContext(FormLabel))
      component="label"
    >
      Genres:
    </WithStyles(WithFormControlContext(FormLabel))>
    <WithStyles(WithFormControlContext(FormControlLabel))
      control={
        <WithStyles(Checkbox)
          checked={false}
          onChange={[Function]}
          value="Religion"
        />
      }
      key="Religion"
      label="Religion"
    />
    <WithStyles(WithFormControlContext(FormControlLabel))
      control={
        <WithStyles(Checkbox)
          checked={true}
          onChange={[Function]}
          value="SELECT ALL"
        />
      }
      key="SELECT ALL"
      label="SELECT ALL"
    />
    <WithStyles(WithFormControlContext(FormControlLabel))
      control={
        <WithStyles(Checkbox)
          checked={false}
          onChange={[Function]}
          value="DESELECT ALL"
        />
      }
      key="DESELECT ALL"
      label="DESELECT ALL"
    />
    <CSVLink
      asyncOnClick={false}
      data={Array []}
      filename="generatedBy_react-csv.csv"
      headers={
        Array [
          Object {
            "key": "isbn",
            "label": "ISBN",
          },
          Object {
            "key": "title",
            "label": "Title",
          },
          Object {
            "key": "subtitle",
            "label": "Subtitle",
          },
          Object {
            "key": "categories",
            "label": "Categories",
          },
          Object {
            "key": "amazonAverageRating",
            "label": "Amazon Average Rating",
          },
          Object {
            "key": "amazonRatingsCount",
            "label": "Amazon Ratings Count",
          },
          Object {
            "key": "goodreadsAverageRating",
            "label": "Goodreads Average Rating",
          },
          Object {
            "key": "goodreadsRatingsCount",
            "label": "Goodreads Ratings Count",
          },
          Object {
            "key": "adjustedRating",
            "label": "Adjusted Rating",
          },
          Object {
            "key": "read",
            "label": "Read",
          },
          Object {
            "key": "owned",
            "label": "Owned",
          },
        ]
      }
      separator=","
      target="_blank"
      uFEFF={true}
    >
      <WithStyles(Fab)
        size="small"
      >
        <pure(SaveAltIcon)
          fontSize="small"
        />
      </WithStyles(Fab)>
    </CSVLink>
  </WithStyles(FormGroup)>
</WithStyles(FormControl)>
`;

exports[`GenreSelector renders inserts updates state after a new book with new category is inserted 1`] = `
<WithStyles(FormControl)
  component="fieldset"
>
  <WithStyles(FormGroup)
    row={true}
  >
    <WithStyles(WithFormControlContext(FormLabel))
      component="label"
    >
      Genres:
    </WithStyles(WithFormControlContext(FormLabel))>
    <WithStyles(WithFormControlContext(FormControlLabel))
      control={
        <WithStyles(Checkbox)
          checked={false}
          onChange={[Function]}
          value="Religion"
        />
      }
      key="Religion"
      label="Religion"
    />
    <WithStyles(WithFormControlContext(FormControlLabel))
      control={
        <WithStyles(Checkbox)
          checked={false}
          onChange={[Function]}
          value="Fatherhood"
        />
      }
      key="Fatherhood"
      label="Fatherhood"
    />
    <WithStyles(WithFormControlContext(FormControlLabel))
      control={
        <WithStyles(Checkbox)
          checked={false}
          onChange={[Function]}
          value="Motherhood"
        />
      }
      key="Motherhood"
      label="Motherhood"
    />
    <WithStyles(WithFormControlContext(FormControlLabel))
      control={
        <WithStyles(Checkbox)
          checked={true}
          onChange={[Function]}
          value="SELECT ALL"
        />
      }
      key="SELECT ALL"
      label="SELECT ALL"
    />
    <WithStyles(WithFormControlContext(FormControlLabel))
      control={
        <WithStyles(Checkbox)
          checked={false}
          onChange={[Function]}
          value="DESELECT ALL"
        />
      }
      key="DESELECT ALL"
      label="DESELECT ALL"
    />
    <CSVLink
      asyncOnClick={false}
      data={Array []}
      filename="generatedBy_react-csv.csv"
      headers={
        Array [
          Object {
            "key": "isbn",
            "label": "ISBN",
          },
          Object {
            "key": "title",
            "label": "Title",
          },
          Object {
            "key": "subtitle",
            "label": "Subtitle",
          },
          Object {
            "key": "categories",
            "label": "Categories",
          },
          Object {
            "key": "amazonAverageRating",
            "label": "Amazon Average Rating",
          },
          Object {
            "key": "amazonRatingsCount",
            "label": "Amazon Ratings Count",
          },
          Object {
            "key": "goodreadsAverageRating",
            "label": "Goodreads Average Rating",
          },
          Object {
            "key": "goodreadsRatingsCount",
            "label": "Goodreads Ratings Count",
          },
          Object {
            "key": "adjustedRating",
            "label": "Adjusted Rating",
          },
          Object {
            "key": "read",
            "label": "Read",
          },
          Object {
            "key": "owned",
            "label": "Owned",
          },
        ]
      }
      separator=","
      target="_blank"
      uFEFF={true}
    >
      <WithStyles(Fab)
        size="small"
      >
        <pure(SaveAltIcon)
          fontSize="small"
        />
      </WithStyles(Fab)>
    </CSVLink>
  </WithStyles(FormGroup)>
</WithStyles(FormControl)>
`;

exports[`GenreSelector renders renders with no genres 1`] = `
<WithStyles(FormControl)
  component="fieldset"
>
  <WithStyles(FormGroup)
    row={true}
  >
    <WithStyles(WithFormControlContext(FormLabel))
      component="label"
    >
      Genres:
    </WithStyles(WithFormControlContext(FormLabel))>
    <WithStyles(WithFormControlContext(FormControlLabel))
      control={
        <WithStyles(Checkbox)
          checked={true}
          onChange={[Function]}
          value="SELECT ALL"
        />
      }
      key="SELECT ALL"
      label="SELECT ALL"
    />
    <WithStyles(WithFormControlContext(FormControlLabel))
      control={
        <WithStyles(Checkbox)
          checked={false}
          onChange={[Function]}
          value="DESELECT ALL"
        />
      }
      key="DESELECT ALL"
      label="DESELECT ALL"
    />
    <CSVLink
      asyncOnClick={false}
      data={Array []}
      filename="generatedBy_react-csv.csv"
      headers={
        Array [
          Object {
            "key": "isbn",
            "label": "ISBN",
          },
          Object {
            "key": "title",
            "label": "Title",
          },
          Object {
            "key": "subtitle",
            "label": "Subtitle",
          },
          Object {
            "key": "categories",
            "label": "Categories",
          },
          Object {
            "key": "amazonAverageRating",
            "label": "Amazon Average Rating",
          },
          Object {
            "key": "amazonRatingsCount",
            "label": "Amazon Ratings Count",
          },
          Object {
            "key": "goodreadsAverageRating",
            "label": "Goodreads Average Rating",
          },
          Object {
            "key": "goodreadsRatingsCount",
            "label": "Goodreads Ratings Count",
          },
          Object {
            "key": "adjustedRating",
            "label": "Adjusted Rating",
          },
          Object {
            "key": "read",
            "label": "Read",
          },
          Object {
            "key": "owned",
            "label": "Owned",
          },
        ]
      }
      separator=","
      target="_blank"
      uFEFF={true}
    >
      <WithStyles(Fab)
        size="small"
      >
        <pure(SaveAltIcon)
          fontSize="small"
        />
      </WithStyles(Fab)>
    </CSVLink>
  </WithStyles(FormGroup)>
</WithStyles(FormControl)>
`;
